Z-Index fix
prevent logo from having dropdown menu border overlap.

--- a/app/css/header.less
+++ b/app/css/header.less
@@ -5,7 +5,7 @@ header {
   text-align: center;
 
   h1 {
-    
+
     font-size: 3em;
     text-align: center;
     text-transform:uppercase;
@@ -18,10 +18,10 @@ header {
 
   .navbar {
     border-width: 0 0 10px;
-    
+
     li {
       font-size: 1.42em;
-    }  
+    }
 
     .navbar-brand {
       padding: 0 .7em;
@@ -33,6 +33,7 @@ header {
         position: absolute;
         top: -1em;
         width: 6em;
+        z-index: @zindex-navbar;
       }
     }
   }
